--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
         <div id="header">
             <div class="cf_video">
-                <video src="video/video.mp4" controls autoplay="true" muted></video>
+                <video src="video/video.mp4" controls autoplay="true" loop="true" muted></video>
             </div>
             <div class="logo">
                 <a href="#">
