--- a/index.html
+++ b/index.html
@@ -53,9 +53,22 @@
                 </li>
             </ul>
         </div><!--/.aside-->
+        <h2>혼다코리아 본사위치</h2>
         <div class="honda_map">
             <!--구글지도 or 네이버지도 or 다음지도 코드 삽입-->
             <div id="map" ></div>
+            <ul class="traffic">
+                <li>
+                    서울시 강남구 삼성로 12-3 대한빌딩 1F (전시장)
+                </li>
+                <li>
+                    지하철 3호선, 삼성역에서 하차 후 도보 5분
+                </li>
+                <li>
+                    건물 공용주차장 / 타워주차장 (30분 초과시 1000원)<br>
+                    ※전시장 앞 10대 주차가능
+                </li>
+            </ul>
             <script>
                 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
                     mapOption = { 
@@ -81,13 +94,14 @@
             </script>
             <!--지도 끝-->
         </div><!--/.honda_map-->
+        <hr class="gubun">
         <div id="footer">
             <div class="footer_logo">
                 <a href="#">
                     <img src="images/footer_logo.gif" alt="혼다코리아">
                 </a>
             </div>
-            <p class="copt_info">
+            <p class="copy_info">
                 copyright&copy; 2020. honda korea. all rights reserved.
             </p>
         </div>
