반응형작업 75%

--- a/index.html
+++ b/index.html
@@ -106,5 +106,10 @@
             </p>
         </div>
     </div>
+    <!-- <script>
+        /*window.onload=function(){
+            alert("가로 폭:"+screen.availWidth);
+        }*-------화면을 띄웠을 때 가로폭이 뜸/
+    </script> -->
 </body>
 </html>
