--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="혼다코리아">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://rnjs.dothome.co.kr/">
-    <meta property="og:image" content="http://id.dothome.co.kr/images/thumb.jpg">
+    <meta property="og:image" content="http://rnjs.dothome.co.kr/images/thumb.jpg">
     <meta property="og:description" content="혼다코리아 웹 사이트(2020ver)">
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/design.css">
